<resources>
    <string name="app_name">Carmen SanDiego</string>
    <string name="iniciarJuego">Iniciar partida</string>
    <string name="resolviendo">Resolviendo: </string>
    <string name="viajar">Viajar</string>
    <string name="pedirPista">Pedir lugar</string>
    <string name="pedirPistas">Pedir pistas</string>
    <string name="ordenDeArresto">Orden de arresto</string>
    <string name="ordenContra">Orden de arresto contra: </string>
    <string name="emitirOrdenContra">Emitir orden contra: </string>
    <string name="emitirOrden">Emitir orden de arresto</string>
    <string name="destinosTitulo">Destinos recorridos:</string>
    <string name="estasEn">Estas en: </string>
    <string name="volver">Volver</string>
    <string name="pista_actual">Pista actual:</string>
    <string name="pedir_pista">Pedir lugar</string>


    <string-array name="villanos">
        <item>James Moriarty</item>
        <item>El Cuco</item>
        <item>El Gato de Springfield</item>
        <item>Walter White</item>
        <item>Carmen SanDiego</item>
    </string-array>

</resources>
