<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/verde"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    tools:context="com.unq.tpi.uis.carmensandiego_mobile.OrdenDeArrestoActivity">

    <TextView
        android:id="@+id/tituloOrden"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ordenDeArresto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginStart="8dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="17dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenContra"
        android:layout_marginStart="14dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tituloOrden"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="14dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toRightOf="@+id/tituloOrden"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tituloOrden"
        android:layout_marginRight="2dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:text="@string/emitirOrdenContra"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="@+id/button"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tituloOrden"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginStart="11dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="11dp"
        app:layout_constraintVertical_bias="1.0"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="emitirOrdenDeArresto"
        android:text="@string/emitirOrden"
        android:layout_marginStart="8dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="219dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viajar"
        android:layout_marginStart="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedirPista"
        android:layout_marginStart="33dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="33dp" />

</android.support.constraint.ConstraintLayout>