<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <Button
        android:id="@+id/viajarButton"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:text="@string/viajar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ordenDeArrestoButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp" />

    <Button
        android:id="@+id/ordenDeArrestoButton"
        android:layout_width="143dp"
        android:layout_height="0dp"
        android:text="@string/ordenDeArresto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="81dp" />

    <TextView
        android:id="@+id/resolviendo"
        android:layout_width="241dp"
        android:layout_height="54dp"
        android:text="@string/resolviendo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        tools:layout_editor_absoluteX="14dp" />

    <TextView
        android:id="@+id/nombreCaso"
        android:layout_width="0dp"
        android:layout_height="52dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/pedirPistaButton"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resolviendo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pedirPistaButton"
        android:layout_width="149dp"
        android:layout_height="49dp"
        android:text="@string/pedirPista"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>