<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unq.tpi.uis.carmensandiego_mobile.PedirPistaActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="volverAPantallaPrincipal"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/investigarEn"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="8dp"
        android:text="Investigar en:"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/pistaActual" />

    <TextView
        android:id="@+id/pistaActual"
        android:layout_width="316dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:text="@string/pista_actual"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/pedir_pista"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/lugar1"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:text=""
        android:onClick="obtenerPista"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/investigarEn" />

    <Button
        android:id="@+id/lugar2"
        android:layout_width="296dp"
        android:layout_height="42dp"
        android:text=""
        android:onClick="obtenerPista"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/lugar1" />

    <Button
        android:id="@+id/lugar3"
        android:layout_width="296dp"
        android:layout_height="43dp"
        android:text=""
        android:onClick="obtenerPista"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/lugar2" />
</android.support.constraint.ConstraintLayout>
